Your commit message here

--- a/jobfinderportal-master/index.html
+++ b/jobfinderportal-master/index.html
@@ -75,8 +75,8 @@
                                 </div>          
                                 <!-- Header-btn -->
                                 <div class="header-btn d-none f-right d-lg-block">
-                                    <a href="#" class="btn head-btn1">Register</a>
-                                    <a href="#" class="btn head-btn2">Login</a>
+                                    <a href="../colorlib-regform-7/signup.html" class="btn head-btn1">Sign Up</a>
+                                    <a href="../colorlib-regform-7/signin.html" class="btn head-btn2">Login</a>
                                 </div>
                             </div>
                         </div>
@@ -101,10 +101,11 @@
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-5">
                                 <div class="hero__caption">
-                                    <h1>Unlocking Opportunities: Discover Empowering Careers for the Specially Abled</h1>
+                                    <h1>KAABIL</h1>
+                                    <h1>Empowering Careers for the Specially Abled</h1>
                                 </div>
                                     <!-- form -->
-                                    <form action="#" class="search-box">
+                                    <!-- <form action="#" class="search-box">
                                         <div class="input-form">
                                             <input type="text" placeholder="Job Title or keyword">
                                         </div>
@@ -121,7 +122,9 @@
                                         <div class="search-form">
                                             <a href="#">Find job</a>
                                         </div>
-                                    </form>
+                                    </form> -->
+                                    <a href="job_listing.html" class="btn head-btn1" style="color: white;">Find Jobs</a>
+                                    <a href="#" class="btn head-btn2"  style="color: black;">Get Started</a>
                             </div>
                             <!-- Adjusted the column class for the image -->
                             <div class="col-xl-5 col-lg-3 col-md-5">
